--- a/src/components/Home/Services/FeatureSlide.module.css
+++ b/src/components/Home/Services/FeatureSlide.module.css
@@ -37,7 +37,7 @@
   color: var(--gray);
   font-family: var(--sub-font);
   font-weight: 400;
-  line-height: 20.3px;
+  line-height: 1.5rem;
 }
 
 .title span span, .text span span {
